--- a/portail/client/src/assets/i18n/it.json
+++ b/portail/client/src/assets/i18n/it.json
@@ -1,1 +1,92 @@
-{"apiadresse.location":"Trova un posto.","main.bug":"Segnalare un'anomalia","main.permalink":"Permalink","button.topics":"Cluster tematici","button.parameter":"Parametri","button.legend":"Leggenda","pannel.attributes":"attributi attributi attributi attributi attributi attributi","panel.pois":"punti di interesse","pannel.hospitals":"ospedali","pannel.clinics":"Clinica Clinica Clinica","pannel.pharmacies":"Farmacie","pannel.social":"Strutture sociali","pannel.schools":"Scuole","pannel.police":"Polizia","pannel.shops":"Negozi","pannel.routes":"Itinerari / Itinerari","pannel.Highways":"autostrade","pannel.roads":"rete stradale","pannel.roads_modif":"rete stradale (Nuove modifiche j-7","pannel.walk":"percorsi escursionistici","pannel.cycle":"percorsi ciclo","pannel.bus":"percorsi autobus","pannel.tram":"Traghetti","pannel.metro":"vie metro","pannel.train":"percorsi ferroviari","pannel.railway":"ferrovie","pannel.frame":"Bâti/Occupazione del suolo","pannel.buildings":"edifici","pannel.constr_proposal":"proposte di costruzione","pannel.constr_current":"costruzioni in corso","pannel.landuse":"Occupazione","pannel.parcs":"parchi naturali","pannel.telecom":"Telecomunicazioni","pannel.nodes":"nodi di connessione","pannel.fibre":"punti della fibra di reciproca","pannel.copper":"Sottoriparatori di rame","pannel.parameters":"Impostazioni della scheda","pannel.basemap":"mappa di sfondo","pannel.transparency":"trasparenza","change.info":"informazioni sull'oggetto","change.elements":"elementi vicini","change.interval":"nessun cambiamento nell'intervallo considerato","change.user":"Ultimo utente","change.timestamp":"ultima prova","change.changeset":"ultimi cambiamenti e","change.transitions":"Variazione intermedia(i)","change.attributes":"attributi openstreetmap","change.key":"chiave","change.value":"valore","change.metadata":"Meta-data","change.historic":"storia dell'oggetto osm","change_config.search":"ricerca di modifiche","change_config.time":"periodo","change_config.topic":"Tema tematico","change_config.select_topic":"selezionare un tema","change_config.footprint":"Controllo geografico","change_config.zone":"Spostare sulla mappa per selezionare l'area di ricerca","change_config.launch":"lanciare la ricerca","change_config.update":"ultimo aggiornamento","change_config.nochange":"non è stato trovato alcun cambiamento per questa richiesta.","change_config.results":"risultati sono stati trovati","change_config.size1":"la dimensione della risposta","change_config.size2":"è importante e i risultati possono essere pesanti da visualizzare.","change_config.size3":"è possibile ingrandire per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca o continuare a caricare i dati.","change_config.continue":"continuare","change_config.expire1":"la richiesta è scaduta. è possibile che il volume dei cambiamenti sia troppo importante.","change_config.expire2":"è possibile ingrandire per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca.","change_config.error":"Mi dispiace, c'e' stato un errore.","change_config.summary":"sintesi","change_config.from":"de la","change_config.to":"a","change_config.category":"Categoria","change_config.number":"numero di entità","change_config.help":"vedi l'aiuto","change_config.legende":"La leggenda","change_config.select":"tutto (de)selezionatore","change_config.create":"creazione","change_config.add":"aggiunto","change_config.modif_tag":"modifica del tag(s) solo","change_config.modif_geo":"modifica solo geometria","change_config.remove":"prelievo","change_config.delete":"cancellazione","change_config.other":"altri","change_config.tagandgeo":"modifica del tag(i) e della geometria","change_config.heatmap":"carta di calore","feature.website":"sito web","feature.email":"indirizzo e-mail","feature.noinfo":"nessuna informazione da visualizzare per l'oggetto"}
+{
+    "apiadresse.location":"ricerca di un luogo...",
+    "main.bug":"Segnalare un'anomalia",
+    "main.permalink":"Permalink",
+
+    "button.topics":"Tematiche",
+    "button.parameter":"Parametri",
+    "button.legend":"Leggenda",
+
+    "pannel.attributes":"Attributi",
+    "panel.pois":"punti di interesse",
+    "pannel.hospitals":"ospedali",
+    "pannel.clinics":"Clinica",
+    "pannel.pharmacies":"Farmacie",
+    "pannel.social":"Strutture sociali",
+    "pannel.schools":"Scuole",
+    "pannel.police":"Polizia",
+    "pannel.shops":"Negozi",
+    "pannel.routes":"Itinerari / Itinerari",
+    "pannel.Highways":"autostrade",
+    "pannel.roads":"rete stradale",
+    "pannel.roads_modif":"rete stradale (Nuove modifiche j-7",
+    "pannel.walk":"percorsi escursionistici",
+    "pannel.cycle":"percorsi ciclo",
+    "pannel.bus":"percorsi autobus",
+    "pannel.tram":"Traghetti",
+    "pannel.metro":"vie metro",
+    "pannel.train":"percorsi ferroviari",
+    "pannel.railway":"ferrovie",
+    "pannel.frame":"Bâti/Occupazione del suolo",
+    "pannel.buildings":"edifici",
+    "pannel.constr_proposal":"proposte di costruzione",
+    "pannel.constr_current":"costruzioni in corso",
+    "pannel.landuse":"Occupazione",
+    "pannel.parcs":"parchi naturali",
+    "pannel.telecom":"Telecomunicazioni",
+    "pannel.nodes":"nodi di connessione",
+    "pannel.fibre":"punti della fibra di reciproca",
+    "pannel.copper":"Sottoriparatori di rame",
+    "pannel.parameters":"Impostazioni della scheda",
+    "pannel.basemap":"mappa di sfondo",
+    "pannel.transparency":"trasparenza",
+    "change.info":"informazioni sull'oggetto",
+    "change.elements":"elementi vicini",
+    "change.interval":"nessun cambiamento nell'intervallo considerato",
+    "change.user":"Ultimo utente",
+    "change.timestamp":"ultima prova",
+    "change.changeset":"ultimi cambiamenti e",
+    "change.transitions":"Variazione intermedia(i)",
+    "change.attributes":"attributi openstreetmap",
+    "change.key":"chiave",
+    "change.value":"valore",
+    "change.metadata":"Meta-data",
+    "change.historic":"storia dell'oggetto osm",
+    "change_config.search":"ricerca di modifiche",
+    "change_config.time":"periodo",
+    "change_config.topic":"Tema tematico",
+    "change_config.select_topic":"selezionare un tema",
+    "change_config.footprint":"Controllo geografico",
+    "change_config.zone":"Spostare sulla mappa per selezionare l'area di ricerca",
+    "change_config.launch":"lanciare la ricerca",
+    "change_config.update":"ultimo aggiornamento",
+    "change_config.nochange":"non è stato trovato alcun cambiamento per questa richiesta.",
+    "change_config.results":"risultati sono stati trovati",
+    "change_config.size1":"la dimensione della risposta",
+    "change_config.size2":"è importante e i risultati possono essere pesanti da visualizzare.",
+    "change_config.size3":"è possibile ingrandire per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca o continuare a caricare i dati.",
+    "change_config.continue":"continuare",
+    "change_config.expire1":"la richiesta è scaduta. è possibile che il volume dei cambiamenti sia troppo importante.",
+    "change_config.expire2":"è possibile ingrandire per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca.",
+    "change_config.error":"Mi dispiace, c'e' stato un errore.",
+    "change_config.summary":"sintesi",
+    "change_config.from":"de la",
+    "change_config.to":"a",
+    "change_config.category":"Categoria",
+    "change_config.number":"numero di entità",
+    "change_config.help":"vedi l'aiuto",
+    "change_config.legende":"La leggenda",
+    "change_config.select":"tutto (de)selezionatore",
+    "change_config.create":"creazione",
+    "change_config.add":"aggiunto",
+    "change_config.modif_tag":"modifica del tag(s) solo",
+    "change_config.modif_geo":"modifica solo geometria",
+    "change_config.remove":"prelievo",
+    "change_config.delete":"cancellazione",
+    "change_config.other":"altri",
+    "change_config.tagandgeo":"modifica del tag(i) e della geometria",
+    "change_config.heatmap":"carta di calore",
+    "feature.website":"sito web",
+    "feature.email":"indirizzo e-mail",
+    "feature.noinfo":"nessuna informazione da visualizzare per l'oggetto"
+}
