modification phrase fr

--- a/portail/client/src/assets/i18n/fr.json
+++ b/portail/client/src/assets/i18n/fr.json
@@ -9,7 +9,7 @@
     "button.legend": "Légende",
     
     "pannel.explanationtitle":"Comment démarrer?",
-    "pannel.explanation": "Sélectionnez une ou plusieurs couches de données dans le menu de droite, zoomez sur une zone puis cliquez sur un objet pour obtenir des information",
+    "pannel.explanation": "Sélectionnez une ou plusieurs couches de données dans le menu de droite, zoomez sur une zone puis cliquez sur un objet pour obtenir des information!",
     "pannel.visibiltylayertitle": "Couche non visible à cette résolution",
     "pannel.visibiltytabletitle": "Table attributaire de la zone visualisée uniquement",
     "pannel.attrvalues": "Valeurs attributaires",
