--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -1,42 +1,56 @@
 {"apiadresse.location":"Suche nach einem Ort...",
-"main.bug":"eine Anomalie melden",
+"main.bug":"Eine Anomalie melden",
 "main.permalink":"Permalink",
 "button.topics":"Thematischen",
 "button.parameter":"Parameter",
 "button.legend":"Legende",
-"pannel.attributes":"Attribute",
-"panel.pois":"Zinspunkte",
-"pannel.hospitals":"Spitals",
-"pannel.clinics":"Klinische Klinik",
-"pannel.pharmacies":"Apotheken",
-"pannel.social":"Sozialstrukturen",
-"pannel.schools":"Schulen",
-"pannel.police":"Polizei",
-"pannel.shops":"Läden",
-"pannel.routes":"Routen/Inhalte",
-"pannel.Highways":"Autobahnen",
-"pannel.roads":"Straßennetz",
-"pannel.roads_modif":"Straßennetz (Neue Änderungen j-7",
-"pannel.walk":"Wanderrouten",
-"pannel.cycle":"Route",
-"pannel.bus":"Strecken",
-"pannel.tram":"Straßenbahn",
-"pannel.metro":"U-Bahn",
-"pannel.train":"Bahnsteig",
-"pannel.railway":"Eisenbahnen",
-"pannel.frame":"Bodenbelegung",
-"pannel.buildings":"Gebäude",
-"pannel.constr_proposal":"Bauvorschläge",
-"pannel.constr_current":"Bauten im laufenden",
-"pannel.landuse":"Landbesetzung",
-"pannel.parcs":"Naturparks",
-"pannel.telecom":"Telekommunikation",
-"pannel.nodes":"Knoten der Verbindung",
-"pannel.fibre":"Punkte der Gegenseitigkeitsfaser",
-"pannel.copper":"Kupferteiler",
-"pannel.parameters":"Karteneinstellungen",
-"pannel.basemap":"Hintergrundkarte",
-"pannel.transparency":"Transparenz",
+"panel.attributes":"Attribute",
+
+
+"pois":"Sehenswürdigkeit",
+
+"magosm:hospitals_point":"Spitals",
+"magosm:clinics_point":"Klinken",
+"magosm:pharmacies_point":"Apotheken",
+"magosm:social_facility_point":"Sozialen Einrichtungen",
+"magosm:police_point":"Polizei",
+"magosm:shops_point":"Geschäfte",
+"magosm:schools_point":"Schulen",
+
+"routes":"Routen und Strecken",
+
+"magosm:motorways_line":"Autobahnen",
+"magosm:highways_line":"Straßennetz",
+"magosm:highways_line_recently_modified":"Straßennetz geändert (t-7)",
+"magosm:hiking_foot_routes_line":"Wanderrouten",
+"magosm:bicycle_mtb_routes_line":"Radrouten",
+"magosm:cycleways_line":"Radwege",
+"magosm:bus_routes_line":"Buslinien",
+"magosm:tram_ltr_routes_line":"Straßenbahnlinien",
+"magosm:subway_routes_line":"U-Bahnlinien",
+"magosm:train_routes_line":"Bahnlinien",
+"magosm:railways_line":"Eisenbahnen",
+
+"landuse":"Gebäudegrundriss & Landnutzung",
+
+"magosm:buildings_polygon":"Gebäude",
+"magosm:proposed":"Konstruktionsvorschlag",
+"magosm:constructions":"Anlagen im Bau",
+"magosm:landuses_naturals_polygon":"Bodenbedeckung",
+"magosm:pnr_polygon":"Regionalen Naturparks",
+
+"telecom":"Telecom",
+
+"magosm:telecom_exchange_point":"Angeschlossenen Knoten",
+"magosm:telecom_fibre_connection_point":"Verteilerpunkte Faser",
+"magosm:telecom_copper_connection_point":"Verteilerpunkte Kupfer",
+
+"myLayers":"Meinen Schichten",
+
+
+"panel.parameters":"Karteneinstellungen",
+"panel.basemap":"Hintergrundkarte",
+"panel.transparency":"Transparenz",
 "change.info":"Informationen zum Objekt",
 "change.elements":"in der Nähe",
 "change.interval":"keine Veränderung des betrachteten Bereichs",
