--- a/portail/client/src/assets/i18n/fr.json
+++ b/portail/client/src/assets/i18n/fr.json
@@ -7,58 +7,66 @@
     "button.topics": "Thématiques",
     "button.parameter": "Paramètres",
     "button.legend": "Légende",
+
+    "panel.attributes":"Attributs",
     
-    "pannel.explanationtitle":"Comment démarrer?",
-    "pannel.explanation": "Sélectionnez une ou plusieurs couches de données dans le menu de droite, zoomez sur une zone puis cliquez sur un objet pour obtenir des information!",
-    "pannel.visibiltylayertitle": "Couche non visible à cette résolution",
-    "pannel.visibiltytabletitle": "Table attributaire de la zone visualisée uniquement",
-    "pannel.attrvalues": "Valeurs attributaires",
-    "pannel.kmldownloadtitle": "Téléchargement KML",
-    "pannel.zonekml": "Téléchargement de la zone visualisée uniquement",
-    "pannel.shpdownloadtitle": "Téléchargement Shapefile",
-    "pannel.zoneshp": "Téléchargement de la zone visualisée uniquement",
-    "pannel.styledownloadtitle": "Téléchargement du style",
-    "pannel.styledownload": "Téléchargement du style au format sld, les pictos ne sont pas inclus",
+    "panel.explanationtitle":"Comment démarrer?",
+    "panel.explanation": "Sélectionnez une ou plusieurs couches de données dans le menu de droite, zoomez sur une zone puis cliquez sur un objet pour obtenir des information!",
+    "panel.visibiltylayertitle": "Couche non visible à cette résolution",
+    "panel.visibiltytabletitle": "Table attributaire de la zone visualisée uniquement",
+    "panel.attrvalues": "Valeurs attributaires",
+    "panel.kmldownloadtitle": "Téléchargement KML",
+    "panel.zonekml": "Téléchargement de la zone visualisée uniquement",
+    "panel.shpdownloadtitle": "Téléchargement Shapefile",
+    "panel.zoneshp": "Téléchargement de la zone visualisée uniquement",
+    "panel.styledownloadtitle": "Téléchargement du style",
+    "panel.styledownload": "Téléchargement du style au format sld, les pictos ne sont pas inclus",
     
-    "pannel.legend": "{{feature.nom_fr}} " ,
+    "pois":"Points d'intérêts",
 
-    "pannel.attributes":"Attributs",
-    
-    "panel.pois": "Points d'intérêt",
-    "pannel.hospitals": "Hôpital",
-    "pannel.clinics": "Cliniques",
-    "pannel.pharmacies": "Pharmacies",
-    "pannel.social": "Structures sociales",
-    "pannel.schools": "Ecoles",
-    "pannel.police": "Polices",
-    "pannel.shops": "Magasins",
+    "magosm:hospitals_point":"Hôpitaux",
+    "magosm:clinics_point":"Cliniques",
+    "magosm:pharmacies_point":"Pharmacies",
+    "magosm:social_facility_point":"Structures sociales",
+    "magosm:police_point":"Police",
+    "magosm:shops_point":"Magasins",
+    "magosm:schools_point":"Écoles",
 
-    "pannel.routes": "Routes/Itinéraires",
-    "pannel.Highways": "Autoroutes",
-    "pannel.roads": "Réseau routier",
-    "pannel.roads_modif": "Réseau routier (Modifications récentes j-7",
-    "pannel.walk": "Itinéraires de randonnée",
-    "pannel.cycle": "Itinéraires cyclables",
-    "pannel.bus": "Itinéraires de bus",
-    "pannel.tram": "Itinéraires de tramways",
-    "pannel.metro": "Itinéraires de métro",
-    "pannel.train": "Itinéraires de train",
-    "pannel.railway": "Voies ferrées",
+    "routes":"Routes & Itinéraires",
 
-    "pannel.frame": "Bâti/Occupation du sol",
-    "pannel.buildings": "Bâtiments",
-    "pannel.constr_proposal": "Propositions de constructions",
-    "pannel.constr_current": "Constructions en cours",
-    "pannel.landuse": "Occupation du sol",
-    "pannel.parcs": "Parcs Naturels",
-    "pannel.telecom": "Télécommunications",
-    "pannel.nodes": "Noeuds de raccordement",
-    "pannel.fibre": "Points de mutualisation Fibre",
-    "pannel.copper": "Sous-répartiteurs cuivre",
+    "magosm:motorways_line":"Autoroutes",
+    "magosm:highways_line":"Réseau routier",
+    "magosm:highways_line_recently_modified":"Routes modifiées (j-7)",
+    "magosm:hiking_foot_routes_line":"Itinéraires de randonnée",
+    "magosm:bicycle_mtb_routes_line":"Itinéraires cyclables",
+    "magosm:cycleways_line":"Pistes cyclables",
+    "magosm:bus_routes_line":"Lignes de bus",
+    "magosm:tram_ltr_routes_line":"Lignes de tramways",
+    "magosm:subway_routes_line":"Lignes de métro",
+    "magosm:train_routes_line":"Lignes ferroviaires",
+    "magosm:railways_line":"Voies ferrées",
 
-    "pannel.parameters":"Paramètres de la carte",
-    "pannel.basemap":"Fond cartographique",
-    "pannel.transparency":"Transparence",
+    "landuse":"Bâti et occupation des sols",
+
+    "magosm:buildings_polygon":"Bâtiments",
+    "magosm:proposed":"Propositions de constructions",
+    "magosm:constructions":"Constructions en cours",
+    "magosm:landuses_naturals_polygon":"Occupation des sols",
+    "magosm:pnr_polygon":"Parcs Naturels Régionaux",
+
+    "telecom":"Télécom",
+
+    "magosm:telecom_exchange_point":"Noeuds de raccordement",
+    "magosm:telecom_fibre_connection_point":"Points de mutualisation Fibre",
+    "magosm:telecom_copper_connection_point":"Sous-répartiteurs cuivre",
+   
+    "myLayers":"Mes Couches",
+  
+
+
+    "panel.parameters":"Paramètres de la carte",
+    "panel.basemap":"Fond cartographique",
+    "panel.transparency":"Transparence",
 
 
     "change.info":"Informations sur l'objet",
