--- a/portail/client/src/assets/i18n/it.json
+++ b/portail/client/src/assets/i18n/it.json
@@ -6,40 +6,53 @@
     "button.topics":"Tematiche",
     "button.parameter":"Parametri",
     "button.legend":"Leggenda",
+    
+    "panel.attributes":"Attributi",
 
-    "pannel.attributes":"Attributi",
-    "panel.pois":"punti di interesse",
-    "pannel.hospitals":"ospedali",
-    "pannel.clinics":"Clinica",
-    "pannel.pharmacies":"Farmacie",
-    "pannel.social":"Strutture sociali",
-    "pannel.schools":"Scuole",
-    "pannel.police":"Polizia",
-    "pannel.shops":"Negozi",
-    "pannel.routes":"Itinerari / Itinerari",
-    "pannel.Highways":"autostrade",
-    "pannel.roads":"rete stradale",
-    "pannel.roads_modif":"rete stradale (Nuove modifiche j-7",
-    "pannel.walk":"percorsi escursionistici",
-    "pannel.cycle":"percorsi ciclo",
-    "pannel.bus":"percorsi autobus",
-    "pannel.tram":"Traghetti",
-    "pannel.metro":"vie metro",
-    "pannel.train":"percorsi ferroviari",
-    "pannel.railway":"ferrovie",
-    "pannel.frame":"Bâti/Occupazione del suolo",
-    "pannel.buildings":"edifici",
-    "pannel.constr_proposal":"proposte di costruzione",
-    "pannel.constr_current":"costruzioni in corso",
-    "pannel.landuse":"Occupazione",
-    "pannel.parcs":"parchi naturali",
-    "pannel.telecom":"Telecomunicazioni",
-    "pannel.nodes":"nodi di connessione",
-    "pannel.fibre":"punti della fibra di reciproca",
-    "pannel.copper":"Sottoriparatori di rame",
-    "pannel.parameters":"Impostazioni della scheda",
-    "pannel.basemap":"mappa di sfondo",
-    "pannel.transparency":"trasparenza",
+    "pois":"Punto di interesse",
+
+    "magosm:hospitals_point":"Hôpitaux",
+    "magosm:clinics_point":"Cliniche",
+    "magosm:pharmacies_point":"Farmacie",
+    "magosm:social_facility_point":"Strutture sociali",
+    "magosm:police_point":"Polizia",
+    "magosm:shops_point":"Negozi",
+    "magosm:schools_point":"Scuole",
+
+    "routes":"Routes & Itinerari",
+
+    "magosm:motorways_line":"Autostrade",
+    "magosm:highways_line":"Rete stradale",
+    "magosm:highways_line_recently_modified":"rotte modificate (g-7)",
+    "magosm:hiking_foot_routes_line":"Percorsi escursionistici",
+    "magosm:bicycle_mtb_routes_line":"Itinerario in bicicletta",
+    "magosm:cycleways_line":"Piste ciclabili",
+    "magosm:bus_routes_line":"Linee di autobus",
+    "magosm:tram_ltr_routes_line":"Linee di tram",
+    "magosm:subway_routes_line":"Linee della metropolitana",
+    "magosm:train_routes_line":"Linee ferroviarie",
+    "magosm:railways_line":"Ferrovie",
+
+    "landuse":"Edifici & occupazione del suolo",
+
+    "magosm:buildings_polygon":"Edifici",
+    "magosm:proposed":"Proposte di costruzione",
+    "magosm:constructions":"Costruzioni in corso",
+    "magosm:landuses_naturals_polygon":"Occupazione del suolo",
+    "magosm:pnr_polygon":"Parchi naturali regionali",
+
+    "telecom":"Telecom",
+
+    "magosm:telecom_exchange_point":"Snodo di raccordo",
+    "magosm:telecom_fibre_connection_point":"Punti di distribuzione Fibra",
+    "magosm:telecom_copper_connection_point":"Armadio di distribuzione rame",
+   
+    "myLayers":"Miei Livelli",
+
+
+    "panel.parameters":"Impostazioni della scheda",
+    "panel.basemap":"mappa di sfondo",
+    "panel.transparency":"trasparenza",
     "change.info":"informazioni sull'oggetto",
     "change.elements":"elementi vicini",
     "change.interval":"nessun cambiamento nell'intervallo considerato",
