--- a/portail/client/src/assets/i18n/en.json
+++ b/portail/client/src/assets/i18n/en.json
@@ -1,64 +1,77 @@
 {
     "apiadresse.location":"Search for a place...",
 
-    "main.bug":"Report a bug",
+    "main.bug":"Report a bug to Gitlab",
     "main.permalink":"Permalink",
     "button.topics":"Themes",
     "button.parameter":"Parameters",
     "button.legend":"Legend",
-    "pannel.explanationtitle":"How to start?",
-    "pannel.explanation": "Select one or more data layers from the right menu, zoom to an area and then click on an object for information",
-    "pannel.visibiltylayertitle": "Layer not visible at this resolution",
-    "pannel.visibiltylayer": "The layer is not visible at this resolution",
-    "pannel.visibiltytabletitle": "Attribute table of the displayed area only",
-    "pannel.attrvalues": "Attribute values",
-    "pannel.kmldownloadtitle": "KML download",
-    "pannel.zonekml": "Downloading the viewing area only",
-    "pannel.shpdownloadtitle": "Shapefile download",
-    "pannel.zoneshp": "Downloading the viewing area only",
-    "pannel.styledownloadtitle": "Style download",
-    "pannel.styledownload": "Download style in sld format, pictograms are not included",
 
 
-    "pannel.legend" : "{{'feature.nom_en'| map }}",
+    "panel.explanationtitle":"How to start?",
+    "panel.explanation": "Select one or more data layers from the right menu, zoom to an area and then click on an object for information",
+    "panel.visibiltylayertitle": "Layer not visible at this resolution",
+    "panel.visibiltylayer": "The layer is not visible at this resolution",
+    "panel.visibiltytabletitle": "Attribute table of the displayed area only",
+    "panel.attrvalues": "Attribute values",
+    "panel.kmldownloadtitle": "KML download",
+    "panel.zonekml": "Downloading the viewing area only",
+    "panel.shpdownloadtitle": "Shapefile download",
+    "panel.zoneshp": "Downloading the viewing area only",
+    "panel.styledownloadtitle": "Style download",
+    "panel.styledownload": "Download style in sld format, pictograms are not included",
 
-    "pannel.attributes":"Attributes",
+    
+    "panel.attributes":"Attributes",
 
-    "panel.pois":"Points of interest",
-    "pannel.hospitals":"Hospitals",
-    "pannel.clinics":"Clinics",
-    "pannel.pharmacies":"Pharmacies",
-    "pannel.social":"Social structures",
-    "pannel.schools":"Schools",
-    "pannel.police":"Police",
-    "pannel.shops":"Shops",
 
-    "pannel.routes":"Routes/Itineraries",
-    "pannel.Highways":"Motorways",
-    "pannel.roads":"Road network",
-    "pannel.roads_modif":"road network ( Recent changes j-7",
-    "pannel.walk":"Hiking routes",
-    "pannel.cycle":"Cycle routes",
-    "pannel.bus":"Bus routes",
-    "pannel.tram":"Tram routes",
-    "pannel.metro":"Subway routes",
-    "pannel.train":"Train routes",
-    "pannel.railway":"Railways",
+    "pois":"Points of Interest",
 
-    "pannel.frame":"Frame/Land use",
-    "pannel.buildings":"Buildings",
-    "pannel.constr_proposal":"Proposals to build",
-    "pannel.constr_current":"Construction in progress",
-    "pannel.landuse":"Land use",
-    "pannel.parcs":"Natural parks",
-    "pannel.telecom":"Telecommunications",
-    "pannel.nodes":"Chain of connection nodes",
-    "pannel.fibre":"Fibre pooling points",
-    "pannel.copper":"Copper sub-splitters",
+    "magosm:hospitals_point":"Hospitals",
+    "magosm:clinics_point":"Clinics",
+    "magosm:pharmacies_point":"Pharmacies",
+    "magosm:social_facility_point":"Social facilities",
+    "magosm:police_point":"Police",
+    "magosm:shops_point":"Shops",
+    "magosm:schools_point":"Schools",
 
-    "pannel.parameters":"Map settings",
-    "pannel.basemap":"Basemap",
-    "pannel.transparency":"Transparency",
+    "routes":"Routes & Itineraries",
+
+    "magosm:motorways_line":"Motorways",
+    "magosm:highways_line":"Highways",
+    "magosm:highways_line_recently_modified":"Highways modified (d-7)",
+    "magosm:hiking_foot_routes_line":"Hiking routes",
+    "magosm:bicycle_mtb_routes_line":"Bicycle routes",
+    "magosm:cycleways_line":"Cycleways",
+    "magosm:bus_routes_line":"Bus routes",
+    "magosm:tram_ltr_routes_line":"Tram routes",
+    "magosm:subway_routes_line":"Underground routes",
+    "magosm:train_routes_line":"train routes",
+    "magosm:railways_line":"Railways",
+
+    "landuse":"Buildings footprint & Landuse",
+
+    "magosm:buildings_polygon":"Buildings",
+    "magosm:proposed":"Construction proposals",
+    "magosm:constructions":"Constructions in progress",
+    "magosm:landuses_naturals_polygon":"Landuse",
+    "magosm:pnr_polygon":"Regional Nature Parks",
+
+    "telecom":"Telecom",
+
+    "magosm:telecom_exchange_point":"Excahnge point",
+    "magosm:telecom_fibre_connection_point":"Connection point Fibre",
+    "magosm:telecom_copper_connection_point":"Connection point Copper",
+
+    "myLayers":"My Layers",
+   
+    
+    "hostpials.surgeon":"Operator",
+
+
+    "panel.parameters":"Map settings",
+    "panel.basemap":"Basemap",
+    "panel.transparency":"Transparency",
 
     "change.info":"Object information",
     "change.elements":"Nearby element(s)",
