--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -9,8 +9,10 @@
 
 "panel.explanationtitle":"Wie fange ich an?",
 "panel.explanation": "Wählen Sie eine oder mehrere Datenebenen im rechten Menü aus, zoomen Sie in ein Feld und klicken Sie dann auf ein Objekt, um Informationen zu erhalten!",
-"panel.visibiltylayertitle": "Schicht nicht sichtbar bei dieser Auflösung",
+"panel.visibiltylayertitle": "Ebene nicht sichtbar bei dieser Auflösung",
+"panel.visibiltylayer": "Die Ebene ist nicht sichtbar bei dieser Auflösung",
 "panel.visibiltytabletitle": "Nur Attributtabelle des angezeigten Bereichs",
+"panel.visibiltytable": "Attributtabelle nur des angezeigten Bereichs",
 "panel.attrvalues": "Attributive Werte",
 "panel.kmldownloadtitle": "Download KML",
 "panel.zonekml": "Nur der angezeigte Bereich herunterladen",
@@ -119,7 +121,11 @@
 "attribute.previouspage":"Vorherige Seite :",
 "attribute.nextpage":"Nächsten Seite :",
 "attribute.on":"von",
-"attribute.elements":"Elemente"
+"attribute.elements":"Elemente",
+
+"alert.display":"Der Layer kann auf dieser Ebene nicht angezeigt werden.",
+"alert.display2":"Zoomen Sie auf die Ebene",
+"alert.display3":"um die Windel zu sehen"
 
 
 }
