Download, helper & new basemaps
New functionalities (download csv, geojson...)&new heper (gif)&new basemap (cantons+municipalities)

--- a/portail/client/src/assets/i18n/en.json
+++ b/portail/client/src/assets/i18n/en.json
@@ -67,7 +67,9 @@
 
     "myLayers":"My Layers",
    
-    
+    "communes": "Municipalities",
+    "cantons": "Cantons",
+
     "hostpials.surgeon":"Operator",
 
 
