--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -61,6 +61,9 @@
 
 "myLayers":"Meinen Schichten",
 
+"communes": "Gemeinden",
+"cantons": "Kantone",
+
 
 "panel.parameters":"Karteneinstellungen",
 "panel.basemap":"Hintergrundkarte",
